add details to cartItems
